# obdium

./: .gitignore  CNAME  CONTRIBUTING.md  Cargo.toml  Gemfile  LICENSE  NOTICES  README  README.md  USER_MANUAL.md  _config.yml  connecting.md  dump.txt  getting_started.md  index.md  live_data.md  readiness_tests.json  requests.json  vin_decoding.md  vin_details.json
.github/workflows/: pages.yml  publish.yml  rust.yml
_posts/: 2026-06-07-welcome-to-jekyll.markdown
backend/: Cargo.toml  dtc_log.json  tauri.conf.json
backend/capabilities/: migrated.json
backend/data/: code-descriptions.sqlite  requests.json
backend/icons/: icon.icns
backend/src/: cmd.rs  dicts.rs  lib.rs  main.rs  mid.rs  obd.rs  replay.rs  response.rs  scalar.rs  stats.rs
backend/src/bridge/: events.rs  mod.rs
backend/src/pid/: air.rs  diagnostics.rs  engine.rs  exhaust.rs  fuel.rs  mod.rs  sensors.rs
backend/src/vin/: attributes.rs  mod.rs  parser.rs  pattern.rs  schema.rs  wmi.rs
connecting/: baud_rates.md  obd_protocols.md  serial_port.md
data/: code-descriptions.sqlite  model-pids.sqlite  requests.json  vpic.sqlite  vpic.sqlite-journal
examples/: obd.rs  vin-decoding.rs
frontend/: index.html  layout.css  main.js  scrollbar.css  styles.css
getting_started/: connecting.md  first_launch.md  installing.md  supported_adapters.md  supported_vehicles.md  system_requirements.md  troubleshooting.md
live_data/: clearing.md  learn.md  obd_overview.md  pausing_dash.md  pausing_stats.md  refresh_rates.md  searching.md  units.md
ref/: dump.txt  gm-22-pids.txt  model-pids.db  nhtsa-procedure.txt
scripts/: values.py
src/: cmd.rs  comms.rs  lib.rs  main.rs  obd.rs  pid.rs  replay.rs  response.rs  scalar.rs  vehicle.rs
src/pid/: air.rs  fuel.rs  (+6 more)
tests/: vin.rs
vin_decoding/: decoding.md  manu_specific.md  search.md  what_is.md
(+18 files in other folders)
