[package]
name = "obdium"
version = "1.0.0"
edition = "2021"

[dependencies]
serialport = "4.7.1"
sqlite = "0.37.0"
chrono = "0.4.41"
num_enum = "0.7.3"
thiserror = "2.0.12"
regex = "1.11.1"
evalexpr = "12.0.2"
serde_json = "1.0.140"
serde = { version = "^1.0.190", features = ["derive"] }
tokio = "1.45.0"
rand = "0.9.1"
tauri = { version = "1", features = [ "window-close", "fs-remove-file", "fs-write-file", "dialog-save", "shell-open"] }

[build-dependencies]
tauri-build = { version = "1", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
