[package]
name = "obdium"
version = "1.5.0"
edition = "2021"

[dependencies]
serialport = "4.7.1"
xz2 = ">=0.1.7"
sqlite = { version = "0.37.0", features = ["bundled"] }
chrono = "0.4.41"
num_enum = "0.7.3"
thiserror = "2.0.12"
regex = "1.11.1"
evalexpr = "12.0.2"
serde_json = "1.0.140"
serde = { version = "^1.0.190", features = ["derive"] }
tokio = "1.45.0"
rand = "0.9.1"
once_cell = "1.21.3"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
